create table head

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <table>
         <thead>
             <tr>
+                <th>08:43:03</th>
+                <th>Induló járatok</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th><img src="Máv logo.jpg" alt="Máv-logó" height="35px"</th>
+            </tr>
+            <tr>
                 <th>Tervezett érkezés</th>
                 <th>Érkezés</th>
                 <th>Vonat</th>
@@ -70,5 +78,6 @@
             </tr>
         </tbody>
     </table>
+    <a href="indulo_vonatok.html">Induló vonatok</a>
 </body>
 </html>
