--- a/indulo_vonatok.html
+++ b/indulo_vonatok.html
@@ -12,8 +12,7 @@
         <tr>
             <th>08:43:10</th>
             <th>Indulás</th>
-            <th>Induló járatok</th>
-            <th></th>
+            <th colspan="2">Induló járatok</th>
             <th>Departures</th>
             <th><img src="Máv logo.jpg" alt="Máv-logó" height="35px"></th>
         </tr>
@@ -70,6 +69,7 @@
             <td>3</td>
         </tr>
     </tbody>
-  </table>  
+  </table> 
+  <a href="index.html">Érkező vonatok</a> 
 </body>
 </html>
